--- a/hiperhivatkozás.html
+++ b/hiperhivatkozás.html
@@ -22,7 +22,7 @@
         </p>
         <p id="sajat fajl"> 
             Saját html fájl megynitása
-            <a href="Próba.html">Katt ide</a>
+            <a href="Próba.html" target="_blank">Katt ide</a>
         </p>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec molestie consequat semper. Phasellus aliquam nulla nec purus lacinia aliquet. Vestibulum non ipsum placerat libero interdum consectetur id eget nibh. Aenean vestibulum non libero eu condimentum. Aliquam posuere vehicula ex, nec ultrices arcu pellentesque quis. Donec a lorem ex. Etiam eros felis, maximus non facilisis et, tincidunt a justo. Fusce bibendum consectetur felis, a ultrices mauris venenatis sed. Sed feugiat dolor eget elit ultrices fringilla. Nam dapibus odio at libero vulputate fringilla. In ultrices eleifend odio convallis feugiat. Vestibulum bibendum, lorem sed pulvinar bibendum, lacus nisi hendrerit libero, sit amet convallis urna justo in sem.
